# cis565-proj2-cuda-stream-compaction

./: CMakeLists.txt  Makefile  README.md  compaction.cu  compaction.h  cuda_helpers.h  main.cu  prefix_sum.cpp  timing.ods
src/: compaction.cu  compaction.h  cuda_helpers.h  main.cpp  main.cu  prefix_sum.cpp  prefix_sum.h
